--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My App</title>
-    <link rel="manifest" href="manifest.json">
-    <link rel="stylesheet" href="styles.css">
-  </head>
-  <body>
-    <h1>Welcome to My App!</h1>
-    <script src="script.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My App</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <h1>Welcome to My App!</h1>
+  <form id="myForm">
+    <label for="title">Title:</label>
+    <input type="text" id="title" name="title"><br><br>
+    <label for="intro">Intro:</label>
+    <textarea id="intro" name="intro"></textarea><br><br>
+    <label for="body">Body:</label>
+    <textarea id="body" name="body"></textarea><br><br>
+    <label for="conclusion">Conclusion:</label>
+    <textarea id="conclusion" name="conclusion"></textarea><br><br>
+    <input type="submit" value="Submit">
+  </form>
+  <script src="script.js"></script>
+</body>
 </html>
