--- a/index.html
+++ b/index.html
@@ -8,15 +8,24 @@
   <form>
     <label for="title">Title:</label>
     <input type="text" id="title" name="title"><br><br>
+    <button id="generate-button-1">Generate Images</button>
+    <div id="image-container-1"></div>
+    <br><br>
     <label for="intro">Intro:</label>
     <textarea id="intro" name="intro"></textarea><br><br>
+    <button id="generate-button-2">Generate Images</button>
+    <div id="image-container-2"></div>
+    <br><br>
     <label for="body">Body:</label>
     <textarea id="body" name="body"></textarea><br><br>
+    <button id="generate-button-3">Generate Images</button>
+    <div id="image-container-3"></div>
+    <br><br>
     <label for="conclusion">Conclusion:</label>
     <textarea id="conclusion" name="conclusion"></textarea><br><br>
-    <button id="generate-button">Generate Images</button>
+    <button id="generate-button-4">Generate Images</button>
+    <div id="image-container-4"></div>
   </form>
-  <div id="image-container"></div>
   <script src="script.js"></script>
 </body>
 </html>
