--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
 <head>
   <title>Pixela API Example</title>
+<link rel="manifest" href="manifest.json">
 </head>
 <body>
-  <h1>Pixela API Example</h1>
+  <!-- rest of the code remains the same -->
+  <h1>Pixels API Example</h1>
   <form>
     <label for="title">Title:</label>
     <input type="text" id="title" name="title"><br><br>
@@ -28,4 +30,6 @@
   </form>
   <script src="script.js"></script>
 </body>
+
+  <!-- rest of the code remains the same -->
 </html>
