--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             
             <div class="form-group">
                 <label for="canopyHeight">
-                    <img src="https://photos.app.goo.gl/wDNtb9ewqvaW4TZQA" alt="Canopy Height Icon"> Canopy Height (ft):
+                    <img src="https://github.com/wtPrice/wtPrice.github.io/assets/169125006/7e338a82-053e-4c9a-ae0e-f57a8a4e6452" alt="Canopy Height Icon"> Canopy Height (ft):
                 </label>
                 <input type="number" id="canopyHeight" name="canopyHeight">
             </div>
