--- a/index.html
+++ b/index.html
@@ -24,21 +24,21 @@
         <form id="treeForm">
             <div class="form-group">
                 <label for="height">
-                    <img src="https://photos.app.goo.gl/exumRV6WywU4Cxj67" alt="Height Icon"> Height (ft):
+                    <img src="https://github.com/wtPrice/wtPrice.github.io/assets/169125006/7e338a82-053e-4c9a-ae0e-f57a8a4e6452" alt="Height Icon"> Height (ft):
                 </label>
                 <input type="number" id="height" name="height">
             </div>
             
             <div class="form-group">
                 <label for="radius1">
-                    <img src="https://photos.app.goo.gl/98ELkak8HKW5nXs56" alt="Canopy Radius Icon"> Canopy Radius 1 (ft):
+                    <img src="https://github.com/wtPrice/wtPrice.github.io/assets/169125006/49bb2c60-fef6-470c-93ca-e11d507e9d39" alt="Canopy Radius Icon"> Canopy Radius 1 (ft):
                 </label>
                 <input type="number" id="radius1" name="radius1">
             </div>
             
             <div class="form-group">
                 <label for="radius2">
-                    <img src="https://photos.app.goo.gl/98ELkak8HKW5nXs56" alt="Canopy Radius Icon"> Canopy Radius 2 (ft):
+                    <img src="https://github.com/wtPrice/wtPrice.github.io/assets/169125006/49bb2c60-fef6-470c-93ca-e11d507e9d39" alt="Canopy Radius Icon"> Canopy Radius 2 (ft):
                 </label>
                 <input type="number" id="radius2" name="radius2">
             </div>
