--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             
             <div class="form-group">
                 <label for="density">
-                    <img src="https://photos.app.goo.gl/r8GcHQfjdtg8RR5s8" alt="Density Icon"> Density Level:
+                    <img src="https://github.com/wtPrice/wtPrice.github.io/assets/169125006/cf0f58dd-ee1d-460f-9d67-6285fb8d03c3" alt="Density Icon"> Density Level:
                 </label>
                 <select id="density" name="density">
                     <option value="1">1 - Sparse</option>
@@ -64,7 +64,7 @@
             
             <div class="form-group">
                 <label for="trimLevel">
-                    <img src="https://photos.app.goo.gl/kVJfKQa1EchN6whS8" alt="Trim Level Icon"> Trim Level:
+                    <img src="https://github.com/wtPrice/wtPrice.github.io/assets/169125006/c8cdee8e-0140-4539-ac4e-93c8ce5f88a8" alt="Trim Level Icon"> Trim Level:
                 </label>
                 <select id="trimLevel" name="trimLevel">
                     <option value="1">1 - Basic Trim</option>
