--- a/index.html
+++ b/index.html
@@ -3,56 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WTPrice - What The Price?</title>
+    <title>Tree Estimate Calculator</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="manifest" href="/manifest.json">
-    <script src="https://accounts.google.com/gsi/client" async defer></script>
-    <script src="https://appleid.cdn-apple.com/appleauth/static/jsapi/appleid/1/en_US/appleid.auth.js"></script>
     <script>
-        if ('serviceWorker' in navigator) {
-            window.addEventListener('load', function() {
-                navigator.serviceWorker.register('/service-worker.js').then(function(registration) {
-                    console.log('Service Worker registered with scope:', registration.scope);
-                }, function(error) {
-                    console.log('Service Worker registration failed:', error);
-                });
-            });
-        }
-        
-        function handleCredentialResponse(response) {
-            console.log("Encoded JWT ID token: " + response.credential);
-            // Assuming successful login, hide auth container and show app container
-            document.getElementById('auth-container').style.display = 'none';
-            document.getElementById('app-container').style.display = 'block';
-        }
-
-        window.onload = function () {
-            google.accounts.id.initialize({
-                client_id: "570167873669-2edb719fp17l9oof9qhik4kirnfad7lp.apps.googleusercontent.com",
-                callback: handleCredentialResponse
-            });
-            google.accounts.id.renderButton(
-                document.getElementById("g_id_signin"),
-                { theme: "outline", size: "large" }  // customization attributes
-            );
-            google.accounts.id.prompt(); // also display the One Tap dialog
-        };
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', function() {
+          navigator.serviceWorker.register('/service-worker.js').then(function(registration) {
+            console.log('Service Worker registered with scope:', registration.scope);
+          }, function(error) {
+            console.log('Service Worker registration failed:', error);
+          });
+        });
+      }
     </script>
 </head>
 <body>
-    <div id="auth-container">
-        <h2>Please Sign In</h2>
-        <div id="g_id_signin"></div>
-        <div id="appleid-signin" data-color="black" data-border="true" data-type="sign in"></div>
-    </div>
-    
-    <div class="container" style="display:none;" id="app-container">
-        <h1>WTPrice</h1>
+    <div class="container">
+        <h1>Tree Estimate Calculator</h1>
         <form id="treeForm">
             <div class="step" id="step-1">
                 <div class="form-group">
                     <label for="height">
-                        <img src="icons/height.png" alt="Height Icon"> Height (ft):
+                        <img src="https://github.com/wtPrice/wtPrice.github.io/assets/169125006/474ba625-aa4b-482b-bf0c-8b4d6414e86f" alt="Height Icon"> Height (ft):
                     </label>
                     <input type="number" id="height" name="height">
                 </div>
@@ -62,7 +35,7 @@
             <div class="step" id="step-2" style="display:none;">
                 <div class="form-group">
                     <label for="radius1">
-                        <img src="icons/canopy_radius.png" alt="Canopy Radius Icon"> Canopy Radius 1 (ft):
+                        <img src="https://github.com/wtPrice/wtPrice.github.io/assets/169125006/80db564f-9658-4453-9c54-1bda9595c0ec" alt="Canopy Radius Icon"> Canopy Radius 1 (ft):
                     </label>
                     <input type="number" id="radius1" name="radius1">
                 </div>
@@ -73,7 +46,7 @@
             <div class="step" id="step-3" style="display:none;">
                 <div class="form-group">
                     <label for="radius2">
-                        <img src="icons/canopy_radius.png" alt="Canopy Radius Icon"> Canopy Radius 2 (ft):
+                        <img src="https://github.com/wtPrice/wtPrice.github.io/assets/169125006/80db564f-9658-4453-9c54-1bda9595c0ec" alt="Canopy Radius Icon"> Canopy Radius 2 (ft):
                     </label>
                     <input type="number" id="radius2" name="radius2">
                 </div>
@@ -84,7 +57,7 @@
             <div class="step" id="step-4" style="display:none;">
                 <div class="form-group">
                     <label for="canopyHeight">
-                        <img src="icons/canopy_height.png" alt="Canopy Height Icon"> Canopy Height (ft):
+                        <img src="https://github.com/wtPrice/wtPrice.github.io/assets/169125006/7e338a82-053e-4c9a-ae0e-f57a8a4e6452" alt="Canopy Height Icon"> Canopy Height (ft):
                     </label>
                     <input type="number" id="canopyHeight" name="canopyHeight">
                 </div>
@@ -95,7 +68,7 @@
             <div class="step" id="step-5" style="display:none;">
                 <div class="form-group">
                     <label for="density">
-                        <img src="icons/density.png" alt="Density Icon"> Density Level:
+                        <img src="https://github.com/wtPrice/wtPrice.github.io/assets/169125006/cf0f58dd-ee1d-460f-9d67-6285fb8d03c3" alt="Density Icon"> Density Level:
                     </label>
                     <select id="density" name="density">
                         <option value="1">1 - Sparse</option>
@@ -111,7 +84,7 @@
             <div class="step" id="step-6" style="display:none;">
                 <div class="form-group">
                     <label for="trimLevel">
-                        <img src="icons/trim_level.png" alt="Trim Level Icon"> Trim Level:
+                        <img src="https://github.com/wtPrice/wtPrice.github.io/assets/169125006/c8cdee8e-0140-4539-ac4e-93c8ce5f88a8" alt="Trim Level Icon"> Trim Level:
                     </label>
                     <select id="trimLevel" name="trimLevel">
                         <option value="1">1 - Basic Trim</option>
@@ -127,6 +100,7 @@
         <p id="result"></p>
         <button type="button" id="downloadButton" style="display:none;" onclick="downloadPDF()">Download PDF</button>
     </div>
+
     <script src="script.js"></script>
 </body>
 </html>
