--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
     </div>
     
     <div class="container" id="app-container" style="display:none;">
+        <header>
+            <img src="path/to/your/logo.png" alt="WTPrice Logo" class="logo">
+        </header>
         <h1>Tree Estimate Calculator</h1>
         <form id="treeForm">
             <div class="step" id="step-1">
