--- a/index.html
+++ b/index.html
@@ -171,10 +171,10 @@
                 </div>
                 <div class="button-group">
                     <button type="button" onclick="prevStep(3)">Back</button>
-                    <button type="button" onclick="nextStep(3)">Next</button>
+                    <button type="button" onclick="
+nextStep(3)">Next</button>
                 </div>
-           
-</div>
+            </div>
             
             <div class="step" id="step-4" style="display:none;">
                 <div class="form-group">
