--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </script>
 </head>
 <body>
-    <div id="auth-container">
+    <div id="auth-container" class="container">
         <h2>Please Sign In</h2>
         <div id="g_id_signin"></div>
     </div>
