--- a/index.html
+++ b/index.html
@@ -40,9 +40,11 @@
     </script>
 </head>
 <body>
-    <div id="auth-container" class="container">
-        <h2>Please Sign In</h2>
-        <div id="g_id_signin"></div>
+    <div class="overlay" id="auth-container">
+        <div class="sign-in-box">
+            <h2>Please Sign In</h2>
+            <div id="g_id_signin"></div>
+        </div>
     </div>
     
     <div class="container" id="app-container" style="display:none;">
