--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             
             <div class="step" id="step-6" style="display:none;">
                 <div class="form-group">
-                    <img src="https://i.imgur.com/dHxtC1N.jpg" alt="Trim Level Icon">
+                    <img src="https://i.imgur.com/ICZ2YD4.png" alt="Trim Level Icon">
                     <label for="trimLevel">Trim Level:</label>
                     <select id="trimLevel" name="trimLevel">
                         <option value="1">1 - Basic Trim</option>
