--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </div>
 <div class="container blur" id="app-container">
     <header>
-        <img src="https://i.imgur.com/diHtzPG.png" alt="WTPrice Logo" class="logo">
+        <img src="https://i.imgur.com/krHkyRF.png" alt="WTPrice Logo" class="logo">
         <h1>Tree Estimate Calculator</h1>
     </header>
     <form id="treeForm">
